# otos_serial_driver

./: README.md  package.xml  setup.cfg  setup.py
config/: otos_params.yaml
firmware/otos_serial_bridge/: otos_serial_bridge.ino
launch/: otos.launch.py
otos_serial_driver/: __init__.py  otos_serial_node.py
resource/: otos_serial_driver
